--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,46 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 
 @keyframes reveal {
   from {
-    opacity: 0;
+    visibility: hidden;
   }
   to {
-    opacity: 1;
+    visibility: visible;
   }
 }
 
 .typewriter {
   overflow: hidden; /* Ensures the text is initially hidden */
+  padding: 7px;
+  word-break: normal;
 }
 
 .typewriter span {
   display: inline-block;
-  opacity: 0; /* Initially hide each letter */
+  visibility: hidden;
   animation: reveal 0.1s forwards; /* Apply the animation */
 }
