implemented chat history with new ui in home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,3 +22,7 @@
   visibility: hidden;
   animation: reveal 0.1s forwards; /* Apply the animation */
 }
+
+#container{
+  height: calc(100% - 60px);
+}
