--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,5 +24,21 @@
 }
 
 #container{
-  height: calc(100% - 60px);
+  height: calc(100% - 65px);
+}
+
+@media screen and (max-width:800px){
+  #container{
+   flex-direction: column;
+  }
+
+  #characters-section{
+    width: 100%;
+    height: 60%
+  }
+
+  #messages-section{
+    width: 100%;
+    height: 40%
+  }
 }
