--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 
+
+
 @keyframes reveal {
   from {
     visibility: hidden;
@@ -46,5 +48,76 @@
   #messages-section{
     width: 100%;
     height: 40%
+  }
+}
+
+.dark #main, .light #main {
+  transition: 0.4s ease;
+}
+
+.dark #main {
+  background-color: rgb(30 41 59);
+  color: white;
+}
+.dark #header, .dark #characters, .dark #messages-section{
+  background-color: rgb(15 23 42);
+}
+.dark #messages-kept img, .dark #messages-kept:hover {
+  background-color: rgb(71 85 105);
+}
+.dark #character-background, .dark #messages-kept:hover{
+  background-color: rgb(51 65 85);
+}
+.dark #characters-border{
+  border-color: rgb(2 6 23);
+}
+.dark #user-textbubble{
+  background-color: #1E5C49
+}
+.dark #bot-textbubble{
+  background-color: #5A5E69
+}
+.dark #form {
+  background-color: #287B62;
+}
+
+@media (prefers-color-scheme: dark) {
+  html, #main {
+    background-color: rgb(30 41 59);
+    color: white;
+  }
+  #header, #characters, #messages-section{
+    background-color: rgb(15 23 42);
+  }
+
+  #messages-kept img, #messages-kept:hover {
+    background-color: rgb(71 85 105);
+  }
+
+  #character-background, #messages-kept:hover{
+    background-color: rgb(51 65 85);
+  }
+  
+  #characters-border{
+    border-color: rgb(2 6 23);
+  }
+
+  #user-textbubble{
+    background-color: #1E5C49
+  }
+
+  #bot-textbubble{
+    background-color: #5A5E69
+  }
+
+  #form {
+    background-color: #287B62;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  html{
+    --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
   }
 }
