--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,9 +69,9 @@
   }
 }
 
-.dark #main, .light #main {
-  transition: all 0.3s ease;
-}
+/* .dark #main, .light #main {
+  transition: background-color 0.1s ease;
+} */
 
 html{
   background-color: #F1F5F9;
